--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <div class="col-md-8 col-md-offset-2">
                         <h2 class="text-center">About Me</h2>
                         <p class="text-center">
-                            Hi my name is Rakesh Mistry.<br>I have just completed a Diploma in Web Development at ACG Yoobee School of Design in Auckland and currently looking for work opportunities in the web industry.
+                            Hi my name is Rakesh Mistry.<br>I have just completed a Diploma in Web Development at Yoobee School of Design in Auckland and currently looking for work opportunities in the web industry.
                         </p>
                         <p class="text-center">
                             This website showcases projects I have completed for the Diploma.
