edit navbar list items height to 2em

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                         </p>
                         <p class="text-center">
                             This website showcases projects I have completed for the Diploma.
-                            <br>If you would like to know more about these project or other work I have done -
+                            <br>If you would like to know more about these projects or other work I have done -
                             <br><a href="#contact-me" class=" animated bounce">please contact me, it would be great to hear from you!</a>
                         </p>
                     </div>
